pushing workers to prod